# iterator_cpp

./: README.md  readme.md
src/: CMakeLists.txt  aggregate.h  iter.cpp  iter.h
src/main/: CMakeLists.txt  aggregate.cpp  aggregate.h  iterator.h  iteratormachine.cpp  iteratormachine.h  machine.cpp  machine.h  main.cpp  parts.cpp  parts.h
